add support for mlforecast in the forecasting operator

--- a/ads/opctl/operator/lowcode/forecast/environment.yaml
+++ b/ads/opctl/operator/lowcode/forecast/environment.yaml
@@ -8,6 +8,7 @@ dependencies:
       - oracle-ads>=2.9.0
       - prophet
       - neuralprophet
+      - mlforecast
       - pmdarima
       - statsmodels
       - report-creator
