--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,7 +159,7 @@ anomaly  = [
   "oracle_ads[opctl]",
   "autots",
   "oracle-automlx[forecasting]==23.4.1",
-  "oracle-automlx[classic]==23.4.1",
+  "oracle-automlx==23.4.1",
   "oracledb",
   "datapane",
 ]
