ODSC-54710. Support Python versions up to 3.12
- updated workflow name

--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -1,4 +1,4 @@
-name: "[Py3.8][Py3.9][Py3.10] tests/unitary/default_setup/**"
+name: "[Py3.8-3.12] tests/unitary/default_setup/**"
 
 on:
   workflow_dispatch:
