--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,7 +179,7 @@ pii = [
   "spacy-transformers==1.2.5",
   "spacy==3.6.1",
 ]
-llm = ["langchain>=0.1.10, <0.1.15", "evaluate>=0.4.0"]
+llm = ["langchain-community<0.0.32, langchain>=0.1.10,<0.1.14", "evaluate>=0.4.0"]
 aqua = ["jupyter_server"]
 
 # To reduce backtracking (decrese deps install time) during test/dev env setup reducing number of versions pip is
@@ -200,7 +200,7 @@ testsuite = [
   "mysql-connector-python",
   "nltk",
   "notebook==6.4.12",
-  "opensearch-py<2.5.0",
+  "opensearch-py",
   "pdfplumber",
   "py4j",
   "pyarrow",
