--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,7 @@ forecast = [
   "oci-cli",
   "optuna==3.1.0",
   "oracle-ads",
+  "oracle-automlx[forecasting]==23.4.1",
   "pmdarima",
   "prophet",
   "shap",
@@ -155,6 +156,7 @@ forecast = [
 ]
 anomaly  = [
   "oracle_ads[opctl]",
+  "oracle-automlx[forecasting]==23.4.1",
   "autots",
   "oracledb",
   "datapane",
