--- a/.github/workflows/run-operators-unit-tests.yml
+++ b/.github/workflows/run-operators-unit-tests.yml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.10.8"]
+        python-version: ["3.8"]
 
     steps:
       - uses: actions/checkout@v4
