ODSC-54710. Support Python versions up to 3.12
- added pkg_resources; python_version>='3.12' to pyproject.toml [testsuite] deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -203,6 +203,7 @@ testsuite = [
   "nltk",
   "notebook==6.4.12",
   "opensearch-py",
+  "pkg_resources; python_version>='3.12'",
   "pdfplumber",
   "py4j",
   "pyarrow",
