--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -55,7 +55,7 @@ jobs:
           conda install python=${{ matrix.python-version }}
           pip install -r test-requirements.txt
           if [[ ${{ matrix.python-version }} ==  "3.12" ]]; then
-            pip install pkg_resources
+            pip install setuptools
           fi
           conda list
           python -m pytest -v -p no:warnings --durations=5 tests/unitary/default_setup
