--- a/.github/workflows/run-unittests-py39-py310.yml
+++ b/.github/workflows/run-unittests-py39-py310.yml
@@ -29,7 +29,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.11", "3.12"]
-        name: ["unitary", "slow_tests"]
+        name: ["unitary",
+              # "slow_tests"
+        ]
         include:
           - name: "unitary"
             test-path: "tests/unitary"
