--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,7 @@ onnx = [
   "lightgbm<4.0.0",            # relax when the official releases of skl2onnx (v1.16.0) and onnxmltools (1.11.3), https://github.com/sdpython/mlprodict/issues/488
   "onnx>=1.12.0",
   "onnxmltools>=1.10.0",
-  "onnxruntime>=1.10.0,!=1.16", # avoid v1.16 https://github.com/microsoft/onnxruntime/issues/17631, revealed by unit tests
+  "onnxruntime>=1.10.0,!=1.16.0", # avoid v1.16 https://github.com/microsoft/onnxruntime/issues/17631, revealed by unit tests
   "oracle_ads[viz]",
   "protobuf<=3.20",
   "skl2onnx>=1.10.4",
@@ -209,7 +209,7 @@ testsuite = [
   "setuptools; python_version>='3.12'",
   "pdfplumber",
   "py4j",
-  "pyarrow",
+  "pyarrow>=15.0.0",
   "statsmodels; python_version=='3.8'",
   "statsmodels>=0.14.1; python_version>='3.9'",  # cython3.0 compatibility added in v0.14.1
   "tables>3.9.0",
