--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -4,6 +4,12 @@ on:
   workflow_dispatch:
   pull_request:
     branches: [ "main" ]
+    paths:
+      - "ads/**"
+      - "!ads/opctl/operator/**"
+      - "!ads/feature_store/**"
+      - "pyproject.toml"
+
 
 # Cancel in progress workflows on pull_requests.
 # https://docs.github.com/en/actions/using-jobs/using-concurrency#example-using-a-fallback-value
