--- a/.github/workflows/run-unittests-py39-py310.yml
+++ b/.github/workflows/run-unittests-py39-py310.yml
@@ -1,4 +1,4 @@
-name: "[Py3.9-3.12] - tests/unitary/**"
+name: "[Py3.9-3.12] - All Unit Tests"
 
 on:
   workflow_dispatch:
@@ -29,11 +29,10 @@ jobs:
       fail-fast: false
       matrix:
         # dask, which is used for tests and some use-cases incompatible with latest py3.11.9, py3.12.3 (https://github.com/dask/dask/issues/11038)
-        # to fix issues with dask, set python to "3.11.8", "3.12.2". Relax it to "3.11", "3.12" after issue with dask resolved
-        python-version: ["3.11.8", "3.12.2"]
-        name: ["unitary",
-              # "slow_tests"
-        ]
+        # To fix issues with dask, set python to "3.11.8", "3.12.2". Relax it to "3.11", "3.12" after issue with dask resolved.
+        # To relax python to "3.11", "3.12" may need to relax dask. But oci-cli depends on click==8.0.4, dask>2023.10.1 depends on "click>=8.1".
+        python-version: ["3.9", "3.10",  "3.11.8", "3.12.2"]
+        name: ["unitary", "slow_tests"]
         include:
           - name: "unitary"
             test-path: "tests/unitary"
@@ -48,8 +47,8 @@ jobs:
               --ignore tests/unitary/with_extras/operator/forecast \
               --ignore tests/unitary/with_extras/operator/pii \
               --ignore tests/unitary/with_extras/hpo
-#          - name: "slow_tests"
-#            test-path: "tests/unitary/with_extras/model"
+          - name: "slow_tests"
+            test-path: "tests/unitary/with_extras/model"
 
     steps:
       - uses: actions/checkout@v4
