enable operators tests on al branches|

--- a/.github/workflows/run-operators-unit-tests.yml
+++ b/.github/workflows/run-operators-unit-tests.yml
@@ -3,11 +3,16 @@ name: "[Py3.8][Py3.10] Operators Tests"
 on:
   workflow_dispatch:
   pull_request:
-    paths:
-      - "ads/opctl/operator/**"
-      - "**requirements.txt"
-      - ".github/workflows/run-operators*.yml"
-      - "test-requirements-operators.txt"
+    branches: [ "main" ]
+
+# on:
+#   workflow_dispatch:
+#   pull_request:
+#     paths:
+#       - "ads/opctl/operator/**"
+#       - "**requirements.txt"
+#       - ".github/workflows/run-operators*.yml"
+#       - "test-requirements-operators.txt"
 
 # Cancel in progress workflows on pull_requests.
 # https://docs.github.com/en/actions/using-jobs/using-concurrency#example-using-a-fallback-value
