temporary report creator install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,6 +154,7 @@ forecast = [
   "statsmodels",
   "plotly",
   "oracledb",
+  "report-creator @ https://github.com/darenr/report_creator.git",
 ]
 anomaly  = [
   "oracle_ads[opctl]",
@@ -162,6 +163,7 @@ anomaly  = [
   "oracle-automlx[classic]==23.4.1",
   "oracledb",
   "datapane",
+  "report-creator @ https://github.com/darenr/report_creator.git",
 ]
 feature-store-marketplace = [
     "oracle-ads[opctl]",
@@ -178,6 +180,7 @@ pii = [
   "scrubadub_spacy",
   "spacy-transformers==1.2.5",
   "spacy==3.6.1",
+  "report-creator @ https://github.com/darenr/report_creator.git",
 ]
 llm = ["langchain-community<0.0.32", "langchain>=0.1.10,<0.1.14", "evaluate>=0.4.0"]
 aqua = ["jupyter_server"]
