--- a/pyproject.toml
+++ b/pyproject.toml
@@ -163,7 +163,7 @@ anomaly  = [
   "oracle-automlx[classic]==23.4.1",
   "oracledb",
   "datapane",
-  "report-creator @ https://github.com/darenr/report_creator.git",
+  "report-creator @ git+https://github.com/darenr/report_creator",
 ]
 feature-store-marketplace = [
     "oracle-ads[opctl]",
