--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,7 +154,7 @@ forecast = [
   "statsmodels",
   "plotly",
   "oracledb",
-  "report-creator @ https://github.com/darenr/report_creator.git",
+  "report-creator @ git+https://github.com/darenr/report_creator",
 ]
 anomaly  = [
   "oracle_ads[opctl]",
@@ -180,7 +180,7 @@ pii = [
   "scrubadub_spacy",
   "spacy-transformers==1.2.5",
   "spacy==3.6.1",
-  "report-creator @ https://github.com/darenr/report_creator.git",
+  "report-creator @ git+https://github.com/darenr/report_creator",
 ]
 llm = ["langchain-community<0.0.32", "langchain>=0.1.10,<0.1.14", "evaluate>=0.4.0"]
 aqua = ["jupyter_server"]
