--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,7 +143,7 @@ forecast = [
   "neuralprophet",
   "numpy",
   "oci-cli",
-  "optuna==3.1.0",
+  "optuna",
   "oracle-ads",
   "pmdarima",
   "prophet",
