include report-creator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -154,7 +154,7 @@ forecast = [
   "statsmodels",
   "plotly",
   "oracledb",
-  "report-creator @ git+https://github.com/darenr/report_creator",
+  "report-creator",
 ]
 anomaly  = [
   "oracle_ads[opctl]",
@@ -163,7 +163,7 @@ anomaly  = [
   "oracle-automlx[classic]==23.4.1",
   "oracledb",
   "datapane",
-  "report-creator @ git+https://github.com/darenr/report_creator",
+  "report-creator",
 ]
 feature-store-marketplace = [
     "oracle-ads[opctl]",
@@ -180,7 +180,7 @@ pii = [
   "scrubadub_spacy",
   "spacy-transformers==1.2.5",
   "spacy==3.6.1",
-  "report-creator @ git+https://github.com/darenr/report_creator",
+  "report-creator",
 ]
 llm = ["langchain-community<0.0.32", "langchain>=0.1.10,<0.1.14", "evaluate>=0.4.0"]
 aqua = ["jupyter_server"]
