remove ref to datapane

--- a/ads/opctl/operator/lowcode/anomaly/environment.yaml
+++ b/ads/opctl/operator/lowcode/anomaly/environment.yaml
@@ -5,7 +5,7 @@ dependencies:
   - python=3.8
   - pip
   - pip:
-      - datapane
+      - report-creator
       - cerberus
       - oracle-automlx==23.4.1
       - oracle-automlx[classic]==23.4.1
