separate unit tests

--- a/.github/workflows/run-forecast-unit-tests.yml
+++ b/.github/workflows/run-forecast-unit-tests.yml
@@ -1,4 +1,4 @@
-name: "Operators Tests"
+name: "Forecast Operator Tests"
 
 on:
   workflow_dispatch:
@@ -44,7 +44,7 @@ jobs:
       - uses: ./.github/workflows/set-dummy-conf
         name: "Test config setup"
 
-      - name: "Run Operators Tests"
+      - name: "Run Forecast Tests"
         timeout-minutes: 180
         shell: bash
         run: |
@@ -52,4 +52,4 @@ jobs:
           $CONDA/bin/conda init
           source /home/runner/.bashrc
           pip install -r test-requirements-operators.txt
-          python -m pytest -v -p no:warnings --durations=5 tests/operators --ignore=tests/operators/forecast
+          python -m pytest -v -p no:warnings --durations=5 tests/operators/forecast
