--- a/.github/workflows/run-forecast-unit-tests.yml
+++ b/.github/workflows/run-forecast-unit-tests.yml
@@ -31,6 +31,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha }}
+
 
       - uses: actions/setup-python@v5
         with:
