--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,7 +175,7 @@ pii = [
   "spacy==3.6.1",
   "report-creator==1.0.9",
 ]
-llm = ["langchain-community<0.0.32", "langchain>=0.1.10,<0.1.14", "evaluate>=0.4.0"]
+llm = ["langchain-community<0.0.32", "langchain>=0.1.10,<0.1.14", "evaluate>=0.4.0", "langchain-core<0.1.51"]
 aqua = ["jupyter_server"]
 
 # To reduce backtracking (decrese deps install time) during test/dev env setup reducing number of versions pip is
